FE/k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: jeonbongjun
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80 # 외부에서 접속할 포트
      targetPort: 80 # Pod의 컨테이너 포트
  type: ClusterIP
